--- a/styles/main.css
+++ b/styles/main.css
@@ -8992,7 +8992,9 @@ th {
 	min-width: 1200px;
 	width: 100%;
 	height: 300px;
-	background-color: #1a1f25
+	background-color: #1a1f25;
+	float:left;
+	padding-top: 40px;
 }
 
 .footer .footer_center {
@@ -10856,6 +10858,16 @@ th {
 
 .products {
 	margin-bottom: 40px
+}
+.products img {
+	height: 300px;
+	width: 500px;
+}
+
+#Products {
+	width: 1200px;
+	margin: 0 auto;
+	position: relative;
 }
 
 .products .fl {
